--- a/src/style.css
+++ b/src/style.css
@@ -16,13 +16,13 @@ img{
 }
 
 @keyframes transit {
-    from {opacity: 0;}
-    to {opacity: 1;}
+    from {opacity: 1;}
+    to {opacity: 0;}
 }
 
 .front-image{
     animation-iteration-count: infinite;
     animation-name: transit;
     animation-duration: 3000ms;
-    animation-timing-function: ease-in-out;
+    /* animation-timing-function: cubic-bezier(1.0, 0.0, 1.0, 0.4); */
 }
